# backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
client/: vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/components/: HistoryPanel.jsx  MatchesPanel.jsx  PlayerSlots.css  PlayerSlots.jsx  RankingsPanel.jsx  StatisticsPanel.jsx
client/src/components/Chat/: Chat.css  (+1 more)
client/src/context/: AuthContext.jsx
client/src/hooks/: useGatewaySession.jsx
client/src/pages/: AuthPage.css  AuthPage.jsx
client/src/services/: api.js  websocket.js
seaorm_migration/: Cargo.toml
seaorm_migration/src/: lib.rs  m20260512_151625_initial.rs
src/: main.rs  runtime_storage.rs
src/adapters/: mod.rs
src/adapters/gateway/: events.rs  mod.rs  payloads.rs  sessions.rs
src/adapters/http/: mod.rs
src/adapters/rest/: mod.rs
src/application/: accounts.rs  activity.rs  auth.rs  chat.rs  game.rs  game_history.rs  jwt.rs  mod.rs  muted.rs  roles.rs  room.rs  savefiles.rs  sessions.rs
src/database/: mod.rs
src/database/core/: accounts.rs  mod.rs
src/database/entities/: mod.rs  prelude.rs
src/database/postgres/: accounts.rs  crud.rs  error.rs  mod.rs  savefiles.rs  sessions.rs
src/database/repository/: error.rs  mod.rs
src/domain/: mod.rs  savefiles.rs
src/domain/accounts/: commands.rs  entities.rs  errors.rs  mod.rs  ports.rs  query.rs  value_objects.rs
src/domain/activity/: commands.rs  entities.rs  errors.rs  events.rs  mod.rs  ports.rs
src/domain/auth/: entities.rs  errors.rs  mod.rs  ports.rs
src/domain/chat/: commands.rs  entities.rs  errors.rs  events.rs  mod.rs  ports.rs
src/domain/game/: errors.rs  events.rs  mod.rs  ports.rs  query.rs
src/domain/game_history/: entities.rs  errors.rs  mod.rs  ports.rs
src/domain/muted/: entities.rs  errors.rs  mod.rs  ports.rs
src/domain/roles/: entities.rs  mod.rs  ports.rs
src/domain/room/: commands.rs  errors.rs  events.rs  mod.rs  ports.rs  query.rs
src/domain/savefiles/: commands.rs  entities.rs  errors.rs  mod.rs  ports.rs
src/domain/sessions/: commands.rs  entities.rs  errors.rs  mod.rs  ports.rs  value_objects.rs
src/http/v1/: auth.rs  errors.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/output/: mod.rs
src/infrastructure/postgres/: accounts.rs  mod.rs  savefiles.rs  sessions.rs
src/payloads/game/: mod.rs
src/service/: accounts.rs  auth.rs  crud.rs  mod.rs  sessions.rs
src/service/payloads/: accounts.rs  error.rs  mod.rs
(+158 files in other folders)
