[package]
name = "duo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
getset = "0.1.6"
poem = { version = "3.1.1", features = ["session", "websocket"] }
rand = "0.8.5"
random-string = "1.1.0"
regex = "1.12.3"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-migration = "1.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
sha256 = "1.5.0"
shuttle = "0.7.1"
shuttle-poem = "0.48.0"
shuttle-runtime = "0.48.0"
thiserror = "2.0.18"
tokio = "1.40.0"
uuid = { version = "1.22.0", features = ["v7"]}
