[package]
name = "duo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "seaorm_migration"]

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1"
chrono = "0.4.38"
dashmap = "6.1.0"
derive_more = { version = "2.1.1", features = ["from"] }
dotenvy = "0.15"
futures = "0.3.30"
futures-util = "0.3.30"
getset = "0.1.6"
indexmap = "2.14.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
poem = { version = "3.1.1", features = ["session", "websocket", "static-files"] }
rand = "0.8.5"
random-string = "1.1.0"
regex = "1.12.3"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-migration = "~2.0.0-rc"
seaorm_migration = { path = "seaorm_migration" }
secrecy = "0.10.3"
serde = "1.0.210"
serde_json = "1.0.128"
sha256 = "1.5.0"
structural-convert = "0.13.0"
thiserror = "2.0.18"
tokio = "1.40.0"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v7", "v4"]}
